added a route to delete subscriptions based on the ID given
